# src/controllers/IndexDocumentController.ts
@@ -7,24 +7,32 @@ import { DocumentTitleCannotBeEmptyError } from '@/contexts/documents/domain/err
 import { DocumentTitleExceedsMaxLengthError } from '@/contexts/documents/domain/errors/DocumentTitleExceedsMaxLengthError';
 import { DocumentContentExceedsMaxLengthError } from '@/contexts/documents/domain/errors/DocumentContentExceedsMaxLengthError';
 import httpStatus from 'http-status';
+import { DocumentAuthorCannotBeEmptyError } from '@/contexts/documents/domain/errors/DocumentAuthorCannotBeEmptyError';
 
 export class IndexDocumentController implements Controller {
   constructor(private readonly useCase: IndexDocumentUseCase) {}
 
   async run(req: Request, res: Response): Promise<void> {
     try {
-      const { title, content } = req.body;
+      const { title, author, content } = req.body;
 
-      // Validate request
-      if (!title || !content) {
+      // Validate request - verificar que no sean undefined, null o solo espacios
+      if (
+        !title ||
+        title.trim().length === 0 ||
+        !author ||
+        author.trim().length === 0 ||
+        !content ||
+        content.trim().length === 0
+      ) {
         res.status(httpStatus.BAD_REQUEST).json({
-          error: 'Title and content are required',
+          error: 'Title, author and content are required',
         });
         return;
       }
 
       // Create request object
-      const request = new IndexDocumentRequest(title, content);
+      const request = new IndexDocumentRequest(title, author, content);
 
       // Execute use case
       const response = await this.useCase.run(request);
@@ -33,6 +41,7 @@ export class IndexDocumentController implements Controller {
       res.status(httpStatus.CREATED).json({
         id: response.id,
         title: response.title,
+        author: response.author,
         content: response.content,
         createdAt: response.createdAt,
       });
@@ -42,7 +51,8 @@ export class IndexDocumentController implements Controller {
         error instanceof DocumentContentCannotBeEmptyError ||
         error instanceof DocumentTitleCannotBeEmptyError ||
         error instanceof DocumentTitleExceedsMaxLengthError ||
-        error instanceof DocumentContentExceedsMaxLengthError
+        error instanceof DocumentContentExceedsMaxLengthError ||
+        error instanceof DocumentAuthorCannotBeEmptyError
       ) {
         res.status(httpStatus.BAD_REQUEST).json({
           error: error.message,
